2009-06-09  David Bateman  <dbateman@free.fr>

	* general/guadgk.m: Add test case and fixed doubly infinite 
	waypoint transform for x = 0 case.

2009-06-09  Marco Caliari <marco.caliari@univr.it>

	* general/guadgk.m: Fix doubly infinite transformation to the finite
	interval.

2009-06-08  Ben Abbott <bpabbott@mac.com>

	* plot/axis.m: Fix bug for 'axis tight' with multiple lines, modify
	demo.

2009-06-07  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* testfun/assert.m: Fix texinfo bug.

2009-06-04  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Change strncmpi(scale,'lo') to 
	strcmp(scale,'log').
	* plot/__go_draw_axes__.m: For log-scale axes use format '10^{%T}'.

2009-06-03  Ben Abbott <bpabbott@mac.com>

	* plot/colorbar.m: Colorbar 'handlevisibility' should be 'on'.
	Add additional demos which illustrate problems with the present
	implementation.
	* plot/__gnuplot_has_feature__.m: Change version for 
	"x11_figure_position" from ">=4.3.0" to ">=4.2.5".
	* plot/__scatter__.m: If the color spec is empty, set using
	__next_line_color__.
	* plot/scatter3.m: Add demos.

2009-06-03  Jaroslav Hajek  <highegg@gmail.com>

	* polynomial/polyfit.m: Fix test.

2009-06-02  Rafael Laboissiere  <rafael@debian.org>

	* help/doc.m: In test, look also for the gzipped version of the
	info_file

2009-05-29  John W. Eaton  <jwe@octave.org>

	* plot/__gnuplot_get_var__.m: Insert missing semicolon.

2009-05-28  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Set x2range when xaxislocation=='top' and set
	y2range when yaxislocation=='right'. Simplified support for ticklabel
	separator '|'.
	* plot/__go_draw_figure__.m: Change 'autoscale fix' to 'autoscale keepfix'.
	* plot/colorbar.m: Add demos.

2009-05-28  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Add support for ticklabel separator '|'.

2009-05-28  Jaroslav Hajek  <highegg@gmail.com>

	* sparse/bicgstab.m: Improve preconditioning; avoid explicit inverse.